design: fixed overflow for connect cta

--- a/src/assets/css/connect.scss
+++ b/src/assets/css/connect.scss
@@ -59,7 +59,9 @@
         // width: 35%;
         // width: 45%;
         width: 25%;
-        overflow-y: scroll;
+        // overflow-y: scroll;
+        overflow-y: auto;
+        overflow-x: hidden;
         box-sizing: content-box;
 
         .--inner-inner {
